# valmiki

./: .sesskey  README.md  assetlinks.json  makefile  pyproject.toml
data/: valmiki.db  valmiki.db-shm  valmiki.db-wal
data/sarga_cache/: kanda_1_sarga_1.dill  kanda_1_sarga_13.dill  kanda_1_sarga_14.dill  kanda_1_sarga_17.dill  kanda_1_sarga_18.dill  kanda_1_sarga_2.dill  kanda_1_sarga_26.dill  kanda_1_sarga_3.dill  kanda_1_sarga_35.dill  kanda_1_sarga_36.dill  kanda_1_sarga_37.dill  kanda_1_sarga_38.dill  kanda_1_sarga_39.dill  kanda_1_sarga_40.dill  kanda_1_sarga_41.dill  kanda_1_sarga_42.dill  kanda_1_sarga_43.dill  kanda_1_sarga_44.dill  kanda_1_sarga_45.dill  kanda_1_sarga_46.dill  kanda_1_sarga_47.dill  kanda_1_sarga_48.dill  kanda_1_sarga_49.dill  kanda_1_sarga_50.dill  kanda_1_sarga_51.dill  kanda_1_sarga_52.dill  kanda_1_sarga_53.dill  kanda_1_sarga_54.dill  kanda_1_sarga_55.dill  kanda_1_sarga_56.dill  kanda_1_sarga_57.dill  kanda_1_sarga_58.dill  kanda_1_sarga_59.dill  kanda_1_sarga_60.dill  kanda_1_sarga_61.dill  kanda_1_sarga_62.dill  kanda_1_sarga_63.dill  kanda_1_sarga_64.dill  kanda_1_sarga_65.dill  kanda_1_sarga_66.dill  (+463 more)
docs/: architecture.md  cleaner_data.md
scripts/: build_sarga_cache.py  build_sarga_stats.py
src/valmiki/: __init__.py  app.py  cli.py  scraper.py
